[gd_scene load_steps=6 format=3 uid="uid://c31cwcs4hgmpa"]

[ext_resource type="Texture2D" uid="uid://ccv4ridl8evo8" path="res://assets/Sprites/UI/MenuButtonBackground.png" id="1_gojdr"]
[ext_resource type="Script" path="res://Scenes/Menus/MainMenu/main_menu_scene.gd" id="1_ytar2"]
[ext_resource type="Texture2D" uid="uid://dg6wd03j2b0ff" path="res://assets/Sprites/UI/SymbolIcons/_P_Big.png" id="2_0l3p2"]
[ext_resource type="Texture2D" uid="uid://brpsb4iq3cd3k" path="res://assets/Sprites/UI/MenuButtonBackground_Pressed.png" id="3_78x4c"]
[ext_resource type="Theme" uid="uid://dwinll8pgdjhc" path="res://Scenes/Themes/standard_theme.tres" id="3_jsv24"]

[node name="MainMenuRootControl" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_ytar2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0l3p2")
expand_mode = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color(0.498039, 0, 0, 1)
layout_mode = 2
theme = ExtResource("3_jsv24")
theme_override_font_sizes/font_size = 64
text = "AGES"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TutorialContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TutorialButton" type="TextureButton" parent="VBoxContainer/TutorialContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/TutorialContainer/TutorialButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PagesContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PagesButton" type="TextureButton" parent="VBoxContainer/PagesContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/PagesContainer/PagesButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Pages"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/StartContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/StartContainer/StartButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadButton" type="TextureButton" parent="VBoxContainer/LoadContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/LoadContainer/LoadButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoreContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MoreButton" type="TextureButton" parent="VBoxContainer/MoreContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/MoreButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "More"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/QuitContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/QuitContainer/QuitButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="AnimationTesterContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="AnimationsButton" type="TextureButton" parent="VBoxContainer2/AnimationTesterContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/AnimationTesterContainer/AnimationsButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Animations"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PagesContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="PagesButton" type="TextureButton" parent="VBoxContainer2/PagesContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/PagesContainer/PagesButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Pages"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="EffectsButton" type="TextureButton" parent="VBoxContainer2/EffectsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/EffectsContainer/EffectsButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Effects"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DevToolsContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="DevToolsButton" type="TextureButton" parent="VBoxContainer2/DevToolsContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="DevLabel" type="Label" parent="VBoxContainer2/DevToolsContainer/DevToolsButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Dev Tools
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="TextureButton" parent="VBoxContainer2/BackContainer"]
layout_mode = 2
texture_normal = ExtResource("1_gojdr")
texture_pressed = ExtResource("3_78x4c")
texture_disabled = ExtResource("3_78x4c")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer2/BackContainer/BackButton"]
modulate = Color(0.462291, 0.462291, 0.462291, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1
